kubernetes/cms/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cms
spec:
  selector:
    app: cms
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
